apps/api/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stackfood-api
  labels:
    app: stackfood-api
    app.kubernetes.io/name: stackfood-api
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: stackfood
  annotations:
    service.alpha.kubernetes.io/app-protocols: '{"http":"HTTP","https":"HTTPS"}'
spec:
  type: ClusterIP # Alterado para ClusterIP já que o Ingress vai expor o serviço
  ports:
    - port: 80
      targetPort: 5039
      protocol: TCP
      name: http
    - port: 443
      targetPort: 7189
      protocol: TCP
      name: https
  selector:
    app: stackfood-api
