apps/api/base/ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: stackfood-api-ingress
#   annotations:
#     # NGINX specific annotations
#     nginx.ingress.kubernetes.io/rewrite-target: /$2
#     nginx.ingress.kubernetes.io/use-regex: "true"
#     nginx.ingress.kubernetes.io/proxy-body-size: "8m"
#     nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
#     nginx.ingress.kubernetes.io/ssl-redirect: "true"
#     # AWS ALB annotations (se estiver usando o ALB Ingress Controller)
#     alb.ingress.kubernetes.io/scheme: "internet-facing"
#     alb.ingress.kubernetes.io/target-type: "ip"
#     alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
# spec:
#   ingressClassName: nginx
#   rules:
#     - host: api.stackfood.com.br
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: stackfood-api
#                 port:
#                   number: 5039

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stackfood-api
  labels:
    app: stackfood-api
  annotations:
    # Configurações essenciais - simplificadas
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: api.stackfood.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stackfood-api
                port:
                  number: 80
